--- a/src/index.scss
+++ b/src/index.scss
@@ -420,3 +420,21 @@ span {
     outline: auto;
     color: #ccc;
 }
+
+.js-form-errors {
+    box-shadow: inset 0 -1px 2px 0 #f3dadb;
+    border-bottom: 3px solid #a0050e;
+    background: #fbf3f3;
+    box-sizing: border-box;
+    margin: 0 0 25px;
+    padding: 25px;
+}
+
+.js-form-errors .message-title {
+    font-family: 'Segoe UI';
+    color: #a0050e !important;
+}
+
+.js-form-errors .message-title ul li {
+    margin: 0 0 5px 20px;
+}
