--- a/src/index.scss
+++ b/src/index.scss
@@ -250,7 +250,8 @@
 
 .login-register {
     padding: 20px 0px 20px;
-    width: 30%;
+    // width: 30%;
+    width: 27%;
     float: right;
     margin: 0px;
     margin-right: 70px;
