--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,7 @@
 @import "~@edx/brand/paragon/fonts";
 @import "~@edx/brand/paragon/variables";
 @import "~@openedx/paragon/scss/core/core";
-@import "~@edx/brand/paragon/overrides";
+// @import "~@edx/brand/paragon/overrides";
 
 @import "sass/style";
 
