--- a/src/index.scss
+++ b/src/index.scss
@@ -540,3 +540,12 @@ span {
 //         width: 35% !important;
 //     }
 // }
+
+#error_pass_msg {
+    margin: 0 0 5px 20px;
+    color: #212529; 
+}
+
+.js-form-error .message-title {
+    font-weight: 600;
+}
